# DiegeticGazeControl

./: .gitignore  .gitmodules  1_dockerscript.sh  CMakeLists.txt  Dockerfile  Future.md  README.md  _pupil_glasses_gaze_position.csv  combined_data.csv  dockerscript.sh  rqt_script.sh  rviz2_script.sh
docker/: 3_rqt.sh  (+6 more)
src/diegetic_button_pkg/: 1_dockerscript.sh  CMakeLists.txt  Dockerfile  package.xml
src/diegetic_button_pkg/button_maps/: .~lock.ButtonMap - O-Joy V2.1.csv#  .~lock.ButtonMap-Ink(boo).csv#  .~lock.ButtonMap-Ink.csv#  AxiomMap - AxiomMap (copy).csv  ButtonMap - A3Piano.csv  ButtonMap - O-Joy V1.1.csv  ButtonMap - O-Joy V1.1.ods  ButtonMap - O-Joy V1.2.csv  ButtonMap - O-Joy V1.3.csv  ButtonMap - O-Joy V1.4.csv  ButtonMap - O-Joy V2.1.csv  ButtonMap - O-Joy V2.csv  ButtonMap - O-Joy.csv  ButtonMap - TestButtons.csv  ButtonMap-Ink(boo).csv  ButtonMap-Ink.csv  TestButtonMapPiano.xlsx
src/diegetic_button_pkg/config/: params.yaml  piano_config.yaml
src/diegetic_button_pkg/launch/: eyes_and_ink.launch.py  eyes_to_joy.launch.py  fixed_eyes_to_joy.launch.py  fixed_webcam_to_joy.launch.py  piano.launch.py  webcam_to_joy.launch.py
src/diegetic_button_pkg/msg/: DiegeticButton.msg  InputStatus.msg
src/diegetic_button_pkg/printables/InterfaceDesignFiles/: Focus Groups - first thoughts.docx
src/diegetic_button_pkg/printables/InterfaceDesignFiles/Buttons/: ButtonMap - O-Joy.csv  TestButtonMap.csv  TestButtonMapSimple.csv
src/diegetic_button_pkg/printables/InterfaceDesignFiles/Piano/: AxiomMap - AxiomMap.csv  AxiomMap - Short.csv  TestButtonMapPiano.csv  TestButtonMapPiano.xlsx
src/diegetic_button_pkg/scripts/: data_logger.py  diegetic_button.py  e_ink_server.py  haptics_manager.py  input_check.py  joy_button_monitor.py  record_script.py
src/diegetic_button_pkg/scripts/devices/: any_synth.py  joy.py  piano_demo.py  sound.py
src/diegetic_button_pkg/scripts/devices/The_Ultimate_Megadrive_Soundfont/: Readme!.txt
src/diegetic_button_pkg/scripts/pyfluidsynth-master/pyFluidSynth.egg-info/: PKG-INFO
(+241 files in other folders)
